--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 	<title>iCinema Log in</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="./css/style1.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style1.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -24,10 +24,10 @@
 
       <div class="social-media">
         <ul>
-          <li><img src="images/facebook.png"></li>
-          <li><img src="images/twitter.png"></li>
-          <li><img src="images/linkedin.png"></li>
-          <li><img src="images/instagram.png"></li>
+          <li><img src="assets/images/facebook.png"></li>
+          <li><img src="assets/images/twitter.png"></li>
+          <li><img src="assets/images/linkedin.png"></li>
+          <li><img src="assets/images/instagram.png"></li>
         </ul>
       </div>
     </div>
@@ -69,6 +69,6 @@
       </div>
     </div>
   </div>
-<script type="text/javascript" src="app1.js"></script>
+<script type="text/javascript" src="assets/app1.js"></script>
 </body>
 </html>
