--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<?php session_start(); 
+  if(empty($_SESSION['userName'])){
+    header("Location: register.html");}
+  ?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,7 +15,7 @@
     <nav>
 
         <a href = "#" class = "logo">
-            <img src="assets/images/iCinema.png">
+            <img src="assets/images/Icinema.png">
         </a>
 
 
