--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
       </div>
       <div class="form sign-up">
         <h2>Sign Up</h2>
-        <form class ="login-form" id="user-form">
+        <form class ="login-form" id="register-form">
         <label>
           <span>Name</span>
           <input type="text" name="name">
