--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </lable>
         <ul class = "menu">
 
-            <li><a href="#"> Home</a></li>
-            <li><a href="#"> Movies</a></li>
-            <li><a href="#"> TV Shows</a></li>
-            <li><a href="#"> Hollywood</a></li>
-            <li><a href="#"> Horror</a></li>
+            <li><a href="#"> Your Recommendations</a></li>
+<!--            <li><a href="#"> Movies</a></li>-->
+<!--            <li><a href="#"> TV Shows</a></li>-->
+<!--            <li><a href="#"> Hollywood</a></li>-->
+<!--            <li><a href="#"> Horror</a></li>-->
 
         </ul>
          <! ---search --------->
@@ -45,9 +45,12 @@
           <img src="https://img.icons8.com/android/24/000000/search.png"/>
         </button>
         </div>
+
         <! ---search icon --------->
         <i class ="fas fa-search"></i>
-
+        <div class = "menu-btn" >
+            <button name="Log Out" button type="submit" class = "btn" id = "logout"> Log-Out</button>
+        </div>
     </nav>
     <div class="container">
       <h1>iCinema</h1>
