Added feature for forgetting password

--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
       </label>
       <button class="submit" type="button" onclick="signIn(this.form)">Sign In</button>
       </form>
-      <p class="forgot-pass">Forgot Password ?</p>
+      <p class="forgot-pass"><a href="https://web.njit.edu/~aa2296/iCinema/account.html">Forgot Password ?</a></p>
 
       <div class="social-media">
         <ul>
