--- a/account.html
+++ b/account.html
@@ -3,9 +3,9 @@
 <!DOCTYPE html><html lang="en">
 <head itemscope="" itemtype="http://schema.org/WebSite">
 <title itemprop="name">
-  Preview Bootstrap  snippets. account setting or edit profile</title>
+  Change Password</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Preview account settings or edit profile.">
+  <meta name="description" content="Change Account Password">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="./assets/css/AccountStyle.css">
@@ -19,21 +19,6 @@
 </script>-->
 <div class="container">
 <div class="row gutters">
-<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
-<div class="card h-100">
-	<div class="card-body">
-		<div class="account-settings">
-			<div class="user-profile">
-				<div class="user-avatar">
-					<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin">
-				</div>
-				<h5 class="user-name">GRAB USERNAME</h5>
-				<h6 class="user-email">GRAB EMAIL</h6>
-			</div>
-		</div>
-	</div>
-</div>
-</div>
 <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
 <div class="card h-100">
 	<div class="card-body">
@@ -41,25 +26,31 @@
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 				<h6 class="mb-2 text-primary">Personal Details</h6>
 			</div>
+      <form id="ChangePass" class ="login-form">
 			<div class="fieldBlock">
-        <div class="title">Full Name</div>
-        <input id="fullname" value="Enter Full Name" size="25"/>
+        <div class="title">Email</div>
+        <input id="email" name="email" type="email" size="25"/>
       </div>
       <div class="fieldBlock">
-        <div class="title">Email</div>
-        <input id="email" value="Enter Email" size="25"/>
+        <div class="title">New Password</div>
+        <input id="password" name="password" type="password" size="25"/>
       </div>
+      </form>
 	  </div>
 		<div class="row gutters">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 				<div class="text-right">
-					<button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
-					<button type="button" id="submit" name="submit" class="btn btn-primary">Update</button>
+					<button type="button" id="Cancel" name="Cancel" onclick = "returnToSign()" class="btn btn-secondary">Cancel</button>
+					<button type="button" id="submit" name="submit" onclick = "changePass()" class="btn btn-primary">Update</button>
 				</div>
 			</div>
 		</div>
+   </form>
 	</div>
 </div>
 </div>
 </div>
 </div>
+<script type="text/javascript" src="assets/js/app3.js"></script>
+</body>
+</html>
