--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <span class = "nav-icon"></span>
         </lable>
         <ul class = "menu">
+        <br>
 
-            <li><a onclick="getRecommend()"> Your Recommendations</a></li>
+<!--            <li><a onclick="getRecommend()"> Your Recommendations</a></li>
 <!--            <li><a href="#"> Movies</a></li>-->
 <!--            <li><a href="#"> TV Shows</a></li>-->
 <!--            <li><a href="#"> Hollywood</a></li>-->
@@ -60,6 +61,15 @@
     </nav>
     <div class="container">
       <h1>iCinema</h1>
+      <div id="test_cases" style="margin-top: 50px;">
+            
+            <button name="Test case 1" class="btn" id="test1" onclick="test1()">Recommendation 1</button>
+            <button name="Test case 2" class="btn" id="test2" onclick="test2()">Recommendation 2</button>
+            <button name="Test case 3" class="btn" id="test3" onclick="test3()">Recommendation 3</button>
+            <button name="Test case 4" class="btn" id="test4" onclick="test4()">Recommendation 4</button>
+            <button name="Test case 5" class="btn" id="test5" onclick="test5()">Recommendation 5</button>
+            <input type="button" value="Reset" onClick="window.location.reload();">
+        </div>
 <!--      <form>-->
 <!--&lt;!&ndash;        <div class="form-group">&ndash;&gt;-->
 <!--&lt;!&ndash;          <input&ndash;&gt;-->
